--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+
+    <!-- Google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="style.css" />
     <script src="app.js" defer></script>
 
@@ -31,13 +40,13 @@
             Please let us know how we did with your support request. All
             feedback is appreciated to help us improve our offering!
           </p>
-          <div class="ratings flex-group">
-            <div class="rating circle-bg">1</div>
-            <div class="rating circle-bg">2</div>
-            <div class="rating circle-bg">3</div>
-            <div class="rating circle-bg">4</div>
-            <div class="rating circle-bg">5</div>
-          </div>
+          <ul class="rating-list flex-group">
+            <li><button class="rating circle-bg">1</button></li>
+            <li><button class="rating circle-bg">2</button></li>
+            <li><button class="rating circle-bg">3</button></li>
+            <li><button class="rating circle-bg">4</button></li>
+            <li><button class="rating circle-bg">5</button></li>
+          </ul>
           <button class="submit-btn">Submit</button>
         </div>
 
