Added thanks content

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <main>
       <div class="card">
-        <div class="rating-content">
+        <div id="rating-content">
           <div class="circle-bg">
             <svg width="17" height="16" xmlns="http://www.w3.org/2000/svg">
               <path
@@ -50,7 +50,7 @@
           <button class="submit-btn">Submit</button>
         </div>
 
-        <div class="thanks-content hidden">
+        <div id="thanks-content" class="hidden">
           <svg width="162" height="108" xmlns="http://www.w3.org/2000/svg">
             <g fill="none">
               <path
