--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
             feedback is appreciated to help us improve our offering!
           </p>
           <ul class="rating-list flex-group">
-            <li><button class="rating circle-bg">1</button></li>
-            <li><button class="rating circle-bg">2</button></li>
-            <li><button class="rating circle-bg">3</button></li>
-            <li><button class="rating circle-bg">4</button></li>
-            <li><button class="rating circle-bg">5</button></li>
+            <li><button class="rating-btn circle-bg">1</button></li>
+            <li><button class="rating-btn circle-bg">2</button></li>
+            <li><button class="rating-btn circle-bg">3</button></li>
+            <li><button class="rating-btn circle-bg">4</button></li>
+            <li><button class="rating-btn circle-bg">5</button></li>
           </ul>
           <button class="submit-btn">Submit</button>
         </div>
